[package]
name = "pam_zxcvbn"
version = "0.1.0"
edition = "2021"
description = "PAM module for password strength checking using zxcvbn"

[lib]
name = "pam_zxcvbn"
crate-type = ["cdylib"]

[dependencies]
pamsm = { version = "0.5", features = ["libpam"] }
zxcvbn = "3"
libc = "0.2"
zeroize = { version = "1", features = ["std"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
panic = "abort"
opt-level = "s"
lto = true
